--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
                     </select>
                 </div>
 
-
                 <!-- to accept a todo -->
                 <form class="todo-accept-container">
                     <input type="text" id="todo-input-id" class="input-accept" placeholder="Add new task"/>
@@ -33,79 +32,8 @@
                     </button>
                 </form>
 
-
                 <!-- To display todos -->
-                <ul id="todo-list-id" class="list-todos">
-                    <!-- <li class="list-element">
-                        <input class="input-check" type="checkbox"
-                         />
-
-                         <input class="input-text" type="text"
-                         />
-
-                         <button class="delete-button"> 
-                            <i class="fa-solid fa-x"></i>
-                         </button>
-                    </li>
-
-                    <li class="list-element" style="list-style-type: none;">
-                        <input checked class="input-check" type="checkbox"
-                         />
-
-                         <input class="input-text" type="text"
-                         />
-
-                         <button class="delete-button"> 
-                            <i class="fa-solid fa-x"></i>
-                         </button>
-                    </li>
-
-                    <li class="list-element" style="list-style-type: none;">
-                        <input class="input-check" type="checkbox"
-                         />
-
-                         <input class="input-text" type="text"
-                         />
-
-                         <button class="delete-button"> 
-                            <i class="fa-solid fa-x"></i>
-                         </button>
-                    </li>
-                    <li class="list-element" style="list-style-type: none;">
-                        <input class="input-check" type="checkbox"
-                         />
-
-                         <input class="input-text" type="text"
-                         />
-
-                         <button class="delete-button"> 
-                            <i class="fa-solid fa-x"></i>
-                         </button>
-                    </li>
-                    <li class="list-element" style="list-style-type: none;">
-                        <input class="input-check" type="checkbox"
-                         />
-
-                         <input class="input-text" type="text"
-                         />
-
-                         <button class="delete-button"> 
-                            <i class="fa-solid fa-x"></i>
-                         </button>
-                    </li>
-                    <li class="list-element" style="list-style-type: none;">
-                        <input class="input-check" type="checkbox"
-                         />
-
-                         <input class="input-text" type="text"
-                         />
-
-                         <button class="delete-button"> 
-                            <i class="fa-solid fa-x"></i>
-                         </button>
-                    </li> -->
-                </ul>
-
+                <ul id="todo-list-id" class="list-todos"></ul>
 
                 <!-- remaining and quote -->
                 <p class="remaining-para">Your remaining todos: <span id="todo-count-id" class="todo-count">0</span></p>
